<resources>
    <string name="app_name">MathTraining</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    //Calcul
    <string name="calc_choix_nombre">Choix nombres maximun</string>
    <string name="calc_choix_operation">Choix des opérations</string>
    <string name="calc_choix_type_calc">Choix du type de calcul</string>
    <string name="calc_type_end">2 + 3 = ?</string>
    <string name="calc_type_inner">2 + ? = 5</string>
    <string name="calc_number_max_100_to_10">100 / 10</string>

    // Livrets
    <string name="liv_title">Livrets</string>
    <string name="liv_choix_title">Choix des livrets</string>
    <string name="liv_type_res">Choix du résultat</string>
    <string name="liv_res_write">Ecrire le résultat</string>
    <string name="liv_res_choix">Choix multiple</string>
    <string name="liv_nbr_calculs">Nombres de calculs</string>

    // Buttons
    <string name="button_continu">Continue</string>
    <string name="title_activity_livret">LivretActivity</string>
</resources>
