<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:text= "@string/liv_choix_title"
        style="@style/StyleTextViewTitle"/>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tl_livret_choice"
            style="@style/StyleTable">

            <TableRow>
                <CheckBox style="@style/StyleRadioButton" android:text="1"/>
                <CheckBox style="@style/StyleRadioButton" android:text="2"/>
                <CheckBox style="@style/StyleRadioButton" android:text="3"/>
            </TableRow>
            <TableRow>
                <CheckBox style="@style/StyleRadioButton" android:text="4"/>
                <CheckBox style="@style/StyleRadioButton" android:text="5"/>
                <CheckBox style="@style/StyleRadioButton" android:text="6"/>
            </TableRow>
            <TableRow>
                <CheckBox style="@style/StyleRadioButton" android:text="7"/>
                <CheckBox style="@style/StyleRadioButton" android:text="8"/>
                <CheckBox style="@style/StyleRadioButton" android:text="9"/>
            </TableRow>
            <TableRow>
                <CheckBox style="@style/StyleRadioButton" android:text="10"/>
                <CheckBox style="@style/StyleRadioButton" android:text="11"/>
                <CheckBox style="@style/StyleRadioButton" android:text="12"/>
            </TableRow>

        </TableLayout>

    <TextView style="@style/StyleTextViewTitle"
        android:text="@string/liv_type_res"/>

       <RadioGroup
           android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_width="match_parent">

        <RadioButton
            android:checked="true"
            android:id="@+id/rb_res_choice"
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liv_res_choix"
            android:layout_column="0"
            />

        <RadioButton
            android:id="@+id/rb_res_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            style="@style/StyleRadioButtonHoriz"
            android:text="@string/liv_res_write"/>

            </RadioGroup>

     <TextView style="@style/StyleTextViewTitle"
        android:text="@string/liv_nbr_calculs"/>

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            />

        <RadioButton
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10" />

        <RadioButton
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_continu"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

</LinearLayout>



