<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:text= "@string/calc_choix_nombre"
        style="@style/StyleTextViewTitle"/>

    <RadioGroup
        android:id="@+id/rg_calc_value_max_number"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            />

        <RadioButton
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20" />

        <RadioButton
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100" />

    </RadioGroup>

    <TextView android:text= "@string/calc_choix_operation"
        style="@style/StyleTextViewTitle"/>

    <RadioGroup
        android:id="@+id/rg_calc_operation"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="+"
            />

        <CheckBox
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />

        <CheckBox
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X" />

        <CheckBox
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/" />
    </RadioGroup>

    <TextView style="@style/StyleTextViewTitle"
        android:text="@string/liv_type_res"/>

       <RadioGroup
           android:id="@+id/rg_res_choice"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_width="match_parent">

        <RadioButton
            android:id="@+id/rb_res_choice"
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liv_res_choix"
            android:layout_column="0"
            />

        <RadioButton
            android:checked="true"
            android:id="@+id/rb_res_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            style="@style/StyleRadioButtonHoriz"
            android:text="@string/liv_res_write"/>

            </RadioGroup>

     <TextView style="@style/StyleTextViewTitle"
        android:text="@string/liv_nbr_calculs"/>

    <RadioGroup
        android:id="@+id/rg_nbr_calcul"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            />

        <RadioButton
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10" />

        <RadioButton
            style="@style/StyleRadioButtonHoriz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20" />

    </RadioGroup>

    <Button
        android:id="@+id/bt_calc_continu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_continu"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

</LinearLayout>

